_Source/force-app/main/default/objects/Account/fields/Account_Name_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_ID__c</fullName>
    <formula>IF( RecordTypeId = &apos;012360000019AuP&apos;,  Name &amp; &quot; - &quot;&amp;  SIP_Corp_UCS_ID__c , IF( CONTAINS(&apos;012360000019AuO:012360000019AuN&apos;, RecordTypeId), Name &amp; &quot; - &quot; &amp; SIP_ARC_Number__c, IF(RecordTypeId = &apos;012360000012Go5&apos;, Name &amp; &quot; - &quot; &amp;  SIP_HOL_IATA_Number_For_Reserved_Account__c, &apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name &amp; ID</label>
    <type>Text</type>
</CustomField>