_Source/force-app/main/default/objects/Account/fields/AccountId_18_Digit__c.field-meta.xml
<CustomField>
    <fullName>AccountId_18_Digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountId 18 Digit</label>
    <type>Text</type>
</CustomField>