_Source/force-app/main/default/objects/Account/fields/Back_End_Performance_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Back_End_Performance_Quarter__c</fullName>
    <label>Back/End Performance - Quarter</label>
    <length>25</length>
    <type>Text</type>
</CustomField>