_Source/force-app/main/default/objects/Account/fields/BI_Abbreviated_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>BI_Abbreviated_Account_Name__c</fullName>
    <inlineHelpText>If the &apos;Account Name&apos; field on its own is not sufficiently descriptive or unique, you can use this field to enter an Account Name that helps you to more easily reference and find the account. Limit 15 Characters.</inlineHelpText>
    <label>Abbreviated Account Name</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>