_Source/force-app/main/default/objects/Account/fields/BI_AC_Flown_Revenue__c.field-meta.xml
<CustomField>
    <fullName>BI_AC_Flown_Revenue__c</fullName>
    <description>Introduced in BI Release 2019 - 11 (Field previously resided on the Account Plan object)</description>
    <label>AC Flown Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>