_Source/force-app/main/default/objects/Account/fields/BI_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>BI_Account_Manager__c</fullName>
    <label>Account Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>