_Source/force-app/main/default/objects/Account/fields/BI_Account_Overview_History__c.field-meta.xml
<CustomField>
    <fullName>BI_Account_Overview_History__c</fullName>
    <label>Account Overview &amp; History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>