_Source/force-app/main/default/objects/Account/fields/BI_Account_Plan_Required__c.field-meta.xml
<CustomField>
    <fullName>BI_Account_Plan_Required__c</fullName>
    <inlineHelpText>Select the Year that you would like to Create an Account Plan for, and Save the account. If an account plan doesn&apos;t already exist for the year that you selected, it will automatically be created for you, and added to the Planning tab for this account.</inlineHelpText>
    <label>Account Plan Required For</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
            <value>
                <fullName>2028</fullName>
            </value>
            <value>
                <fullName>2029</fullName>
            </value>
            <value>
                <fullName>2030</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>