_Source/force-app/main/default/objects/Account/fields/BI_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>BI_Account_Type__c</fullName>
    <label>Custom Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Type</valueSetName>
    </valueSet>
</CustomField>