_Source/force-app/main/default/objects/Account/fields/BI_AccountId_del__c.field-meta.xml
<CustomField>
    <fullName>BI_AccountId_del__c</fullName>
    <formula>Id</formula>
    <label>AccountId</label>
    <type>Text</type>
</CustomField>