_Source/force-app/main/default/objects/Account/fields/BI_Airline_Partnership_Type__c.field-meta.xml
<CustomField>
    <fullName>BI_Airline_Partnership_Type__c</fullName>
    <label>Airline Partnership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Star Corp Plus</fullName>
            </value>
            <value>
                <fullName>Star Regional</fullName>
            </value>
            <value>
                <fullName>Full Network</fullName>
            </value>
            <value>
                <fullName>A++ JV</fullName>
            </value>
            <value>
                <fullName>Trans-PAC JV</fullName>
            </value>
            <value>
                <fullName>US-CAN JV</fullName>
            </value>
            <value>
                <fullName>US-NZ JV</fullName>
            </value>
            <value>
                <fullName>UA PAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>