_Source/force-app/main/default/objects/Account/fields/BI_Contract_Signatory_Email__c.field-meta.xml
<CustomField>
    <fullName>BI_Contract_Signatory_Email__c</fullName>
    <label>Contract Signatory Email</label>
    <type>Email</type>
</CustomField>