_Source/force-app/main/default/objects/Account/fields/BI_Contracted_JV_Revenue__c.field-meta.xml
<CustomField>
    <fullName>BI_Contracted_JV_Revenue__c</fullName>
    <label>Contracted JV Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>