_Source/force-app/main/default/objects/Account/fields/BI_Corporate_Preferred__c.field-meta.xml
<CustomField>
    <fullName>BI_Corporate_Preferred__c</fullName>
    <label>Corporate Preferred</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Preferred Elite</fullName>
            </value>
            <value>
                <fullName>Yes - Preferred Plus</fullName>
            </value>
            <value>
                <fullName>Yes - Preferred</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>