_Source/force-app/main/default/objects/Account/fields/BI_Create_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>BI_Create_Account_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Account Plan</label>
    <type>Checkbox</type>
</CustomField>