_Source/force-app/main/default/objects/Account/fields/BI_Description__c.field-meta.xml
<CustomField>
    <fullName>BI_Description__c</fullName>
    <description>We are using this field to populate the business description from Hoovers, in the same way as the out of box description field. We added this custom field so that we can map the description from the lead custom description when the lead is converted and an existing account is selected, since we only have the option to map custom fields.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>