_Source/force-app/main/default/objects/Account/fields/BI_Direct_Booking__c.field-meta.xml
<CustomField>
    <fullName>BI_Direct_Booking__c</fullName>
    <label>Direct Booking?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>