_Source/force-app/main/default/objects/Account/fields/BI_eDRA_Authorization_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_eDRA_Authorization_Date__c</fullName>
    <label>eDRA Authorization Date</label>
    <type>Date</type>
</CustomField>