_Source/force-app/main/default/objects/Account/fields/BI_Executation_Status__c.field-meta.xml
<CustomField>
    <fullName>BI_Executation_Status__c</fullName>
    <label>Execution Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>