_Source/force-app/main/default/objects/Account/fields/BI_Form_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>BI_Form_of_Payment__c</fullName>
    <label>Form of Payment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Form_of_Payment</valueSetName>
    </valueSet>
</CustomField>