_Source/force-app/main/default/objects/Account/fields/BI_GDS_Catalog__c.field-meta.xml
<CustomField>
    <fullName>BI_GDS_Catalog__c</fullName>
    <label>GDS Catalog</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sabre</fullName>
            </value>
            <value>
                <fullName>Apollo</fullName>
            </value>
            <value>
                <fullName>Galileo</fullName>
            </value>
            <value>
                <fullName>Worldspan</fullName>
            </value>
            <value>
                <fullName>Amadeus</fullName>
            </value>
            <value>
                <fullName>Travelsky</fullName>
            </value>
            <value>
                <fullName>Infini</fullName>
            </value>
            <value>
                <fullName>Axess</fullName>
            </value>
            <value>
                <fullName>Abacus</fullName>
            </value>
            <value>
                <fullName>Farelogix</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>