_Source/force-app/main/default/objects/Account/fields/BI_Gift_Threshold__c.field-meta.xml
<CustomField>
    <fullName>BI_Gift_Threshold__c</fullName>
    <label>Gift Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>