_Source/force-app/main/default/objects/Account/fields/BI_Included_Points_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>BI_Included_Points_of_Sale__c</fullName>
    <label>Included Points of Sale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>