_Source/force-app/main/default/objects/Account/fields/BI_Industry_Flown_Revenue__c.field-meta.xml
<CustomField>
    <fullName>BI_Industry_Flown_Revenue__c</fullName>
    <description>Added in BI Release 2019 - 11 (field was previously on Account Plan object)</description>
    <label>Industry Flown Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>