_Source/force-app/main/default/objects/Account/fields/BI_Industry_Sales__c.field-meta.xml
<CustomField>
    <fullName>BI_Industry_Sales__c</fullName>
    <inlineHelpText>12 month industry sales.</inlineHelpText>
    <label>Industry Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>