_Source/force-app/main/default/objects/Account/fields/BI_IsUpdateByConvert__c.field-meta.xml
<CustomField>
    <fullName>BI_IsUpdateByConvert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark flag to identify whether this account is manually updated or converted from Lead</description>
    <label>IsUpdateByConverted</label>
    <type>Checkbox</type>
</CustomField>