_Source/force-app/main/default/objects/Account/fields/BI_JV_APM_Share__c.field-meta.xml
<CustomField>
    <fullName>BI_JV_APM_Share__c</fullName>
    <description>BI Release 2019 - 11 (field previously resided on the Account Plan Object)</description>
    <label>JV APM Share %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>