_Source/force-app/main/default/objects/Account/fields/BI_JV_Flown_Revenue__c.field-meta.xml
<CustomField>
    <fullName>BI_JV_Flown_Revenue__c</fullName>
    <formula>BI_AC_Flown_Revenue__c +  BI_LH_Group_Flown_Revenue__c  +  BI_NH_Flown_Revenue__c +  BI_UA_Flown_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto Calculated - Sum of AC Flown Revenue, LH Group Flown Revenue, NH Flown Revenue, and UA Flown Revenue</inlineHelpText>
    <label>JV Flown Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>