_Source/force-app/main/default/objects/Account/fields/BI_JV_of_APM__c.field-meta.xml
<CustomField>
    <fullName>BI_JV_of_APM__c</fullName>
    <formula>IF((BI_JV_Share__c  &lt;&gt; null || BI_JV_Share__c  &lt;&gt; 0) &amp;&amp; (BI_JV_APM_Share__c &lt;&gt; null || BI_JV_APM_Share__c  &lt;&gt; 0),
(BI_JV_Share__c  / BI_JV_APM_Share__c ),
null
)</formula>
    <label>JV % of APM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>