_Source/force-app/main/default/objects/Account/fields/BI_JV_Sales__c.field-meta.xml
<CustomField>
    <fullName>BI_JV_Sales__c</fullName>
    <inlineHelpText>12 month sales results.</inlineHelpText>
    <label>JV Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>