_Source/force-app/main/default/objects/Account/fields/BI_JV_Share__c.field-meta.xml
<CustomField>
    <fullName>BI_JV_Share__c</fullName>
    <formula>IF( (BI_Industry_Sales__c  &lt;&gt; null || BI_Industry_Sales__c &lt;&gt; 0), BI_JV_Sales__c  /  BI_Industry_Sales__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto Calculated: JV Sales / Industry Sales</inlineHelpText>
    <label>JV Share %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>