_Source/force-app/main/default/objects/Account/fields/BI_JV_Share_Premium_points__c.field-meta.xml
<CustomField>
    <fullName>BI_JV_Share_Premium_points__c</fullName>
    <formula>IF( 


(BI_JV_Share__c &lt;&gt; null || BI_JV_Share__c &lt;&gt; 0) &amp;&amp;  (BI_JV_APM_Share__c &lt;&gt; null || BI_JV_APM_Share__c &lt;&gt; 0),  (BI_JV_Share__c  - BI_JV_APM_Share__c), null


)</formula>
    <inlineHelpText>Value is auto calculated based on JV Share % and JV APM Share %. (both fields must have values for calculation to take place)</inlineHelpText>
    <label>JV Share Premium (points)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>