_Source/force-app/main/default/objects/Account/fields/BI_LH_Group_Flown_Revenue__c.field-meta.xml
<CustomField>
    <fullName>BI_LH_Group_Flown_Revenue__c</fullName>
    <label>LH Group Flown Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>