_Source/force-app/main/default/objects/Account/fields/BI_LH_UCID__c.field-meta.xml
<CustomField>
    <fullName>BI_LH_UCID__c</fullName>
    <label>LH Base UCID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>