_Source/force-app/main/default/objects/Account/fields/BI_LTM_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>BI_LTM_Market_Share__c</fullName>
    <label>LTM Market Share</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>