_Source/force-app/main/default/objects/Account/fields/BI_LTM_Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>BI_LTM_Net_Revenue__c</fullName>
    <label>LTM Net Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>