_Source/force-app/main/default/objects/Account/fields/BI_Market_Share_Target__c.field-meta.xml
<CustomField>
    <fullName>BI_Market_Share_Target__c</fullName>
    <label>Market Share Target</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>