_Source/force-app/main/default/objects/Account/fields/BI_NH_Corporate_Code__c.field-meta.xml
<CustomField>
    <fullName>BI_NH_Corporate_Code__c</fullName>
    <label>NH Corporate Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>