_Source/force-app/main/default/objects/Account/fields/BI_NH_Flown_Revenue__c.field-meta.xml
<CustomField>
    <fullName>BI_NH_Flown_Revenue__c</fullName>
    <description>New field added in BI Release 2019 - 11 (Field previously resided on Account Plan)</description>
    <label>NH Flown Revenue</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>