_Source/force-app/main/default/objects/Account/fields/BI_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>BI_Opportunities__c</fullName>
    <label>Opportunities</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>