_Source/force-app/main/default/objects/Account/fields/BI_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>BI_Owner_Name__c</fullName>
    <formula>Owner.LastName + &apos; &apos; + Owner.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>