_Source/force-app/main/default/objects/Account/fields/BI_Part_of_my_Team__c.field-meta.xml
<CustomField>
    <fullName>BI_Part_of_my_Team__c</fullName>
    <formula>IF ( OR($User.Id = Owner.Id, $User.Id = Owner.ManagerId, $User.Id = Owner.Manager.ManagerId,$User.Id = Owner.Manager.Manager.ManagerId, $User.Id = Owner.Manager.Manager.Manager.ManagerId ,$User.Id = Owner.Manager.Manager.Manager.Manager.ManagerId ,$User.Id = Owner.Manager.Manager.Manager.Manager.Manager.ManagerId ,$User.Id = SIP_Sales_Service_Manager__c ) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part of my Team</label>
    <type>Checkbox</type>
</CustomField>