_Source/force-app/main/default/objects/Account/fields/BI_Perks_Plus_ID__c.field-meta.xml
<CustomField>
    <fullName>BI_Perks_Plus_ID__c</fullName>
    <externalId>true</externalId>
    <label>Perks Plus ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>