_Source/force-app/main/default/objects/Account/fields/BI_Restricted_Access__c.field-meta.xml
<CustomField>
    <fullName>BI_Restricted_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to restrict access to the account</inlineHelpText>
    <label>Restricted Access</label>
    <type>Checkbox</type>
</CustomField>