_Source/force-app/main/default/objects/Account/fields/BI_Secondary_Alliance__c.field-meta.xml
<CustomField>
    <fullName>BI_Secondary_Alliance__c</fullName>
    <label>Secondary Alliance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Star Alliance</fullName>
            </value>
            <value>
                <fullName>SkyTeam</fullName>
            </value>
            <value>
                <fullName>OneWorld</fullName>
            </value>
            <value>
                <fullName>MiddleEast Carriers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>