_Source/force-app/main/default/objects/Account/fields/BI_Strength_of_Travel_Policy__c.field-meta.xml
<CustomField>
    <fullName>BI_Strength_of_Travel_Policy__c</fullName>
    <label>Strength of Travel Policy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - Open Traveler Preference</fullName>
            </value>
            <value>
                <fullName>1 -Lowest Logical</fullName>
            </value>
            <value>
                <fullName>2 - Prefered Carrier Mandated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>