_Source/force-app/main/default/objects/Account/fields/BI_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>BI_Tax_ID__c</fullName>
    <label>Tax ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>