_Source/force-app/main/default/objects/Account/fields/BI_Travel_Policy_Details__c.field-meta.xml
<CustomField>
    <fullName>BI_Travel_Policy_Details__c</fullName>
    <label>Travel Policy Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>