_Source/force-app/main/default/objects/Account/fields/BI_UA_Flown_Revenue__c.field-meta.xml
<CustomField>
    <fullName>BI_UA_Flown_Revenue__c</fullName>
    <description>Introduced in BI Release 2019 - 11 (field was previously on the Account Plan object)</description>
    <label>UA Flown Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>