_Source/force-app/main/default/objects/Account/fields/BI_Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>BI_Weaknesses__c</fullName>
    <label>Weaknesses</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>