_Source/force-app/main/default/objects/Account/fields/SIP_Active__c.field-meta.xml
<CustomField>
    <fullName>SIP_Active__c</fullName>
    <defaultValue>IF( OR($RecordType.Name = &quot;Corporate&quot;, $RecordType.Name = &quot;Custom&quot;), &quot;Active&quot;, &quot;&quot;)</defaultValue>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>InActive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>