_Source/force-app/main/default/objects/Account/fields/SIP_ARC_Number__c.field-meta.xml
<CustomField>
    <fullName>SIP_ARC_Number__c</fullName>
    <externalId>true</externalId>
    <label>ARC / IATA#</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>