_Source/force-app/main/default/objects/Account/fields/SIP_Back_End_Performance_JV__c.field-meta.xml
<CustomField>
    <fullName>SIP_Back_End_Performance_JV__c</fullName>
    <label>Back/End Performance - JV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>