_Source/force-app/main/default/objects/Account/fields/SIP_Corp_UCS_ID__c.field-meta.xml
<CustomField>
    <fullName>SIP_Corp_UCS_ID__c</fullName>
    <externalId>true</externalId>
    <label>Corp UCS ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>