_Source/force-app/main/default/objects/Account/fields/SIP_Current_Contract_Performance__c.field-meta.xml
<CustomField>
    <fullName>SIP_Current_Contract_Performance__c</fullName>
    <inlineHelpText>Flight Compliance – Contract to Date – up to 24 months</inlineHelpText>
    <label>Current Contract Performance</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>