_Source/force-app/main/default/objects/Account/fields/SIP_Estimated_Earnings_Quarter__c.field-meta.xml
<CustomField>
    <fullName>SIP_Estimated_Earnings_Quarter__c</fullName>
    <label>Estimated Earnings - Quarter</label>
    <length>25</length>
    <type>Text</type>
</CustomField>