_Source/force-app/main/default/objects/Account/fields/SIP_HOL_IATA_Number_For_Reserved_Account__c.field-meta.xml
<CustomField>
    <fullName>SIP_HOL_IATA_Number_For_Reserved_Account__c</fullName>
    <description>Arc number from the hol account, this field is only used for reserved account as an external Id</description>
    <externalId>true</externalId>
    <label>HOL IATA Number For Reserved Account</label>
    <length>20</length>
    <type>Text</type>
</CustomField>